Fixed text background blur to be more readable

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,6 @@
 :root{
-  --text-background-color: color-mix(in srgb, var(--background-50), transparent 20%);
+  --text-background-color: color-mix(in srgb, var(--background-50), transparent 10%);
+  --blur-size: 7.5px;
 }
 
 *{
@@ -56,8 +57,8 @@ body{
   border-radius: 8px;
   background-color: transparent;
   color: var(--background-900);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(var(--blur-size));
+  -webkit-backdrop-filter: blur(var(--blur-size));
 }
 
 .icon{
@@ -77,8 +78,10 @@ a {
   margin-right: var(--side-margin) ; 
   font-size: 1.5em;
   color: var(--primary-500);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
+
+  backdrop-filter: blur(var(--blur-size));
+  -webkit-backdrop-filter: blur(var(--blur-size));
+  background-color: var(--text-background-color);
 }
 
 /* https://stackoverflow.com/a/62221520 ily */
